# roll

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
