[package]
name = "rollcli"
version = "0.3.3"
edition = "2024"
description = "A command-line dice roller for tabletop RPGs with advantage/disadvantage and probability estimation"
license = "MIT"
repository = "https://github.com/volnuttz/roll"
readme = "README.md"
keywords = ["dice", "rpg", "ttrpg", "roller", "cli"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "roll"
path = "src/main.rs"

[lib]
name = "roll"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
rand = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
rand = { version = "0.9", features = ["small_rng"] }
